[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Roommenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://font/8bit.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/Volume.tscn" type="PackedScene" id=4]
[ext_resource path="res://music/calm.ogg" type="AudioStream" id=5]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Test" parent="." instance=ExtResource( 2 )]
position = Vector2( 19.4854, -34.1053 )

[node name="Continue" type="Button" parent="."]
margin_left = 403.669
margin_top = 271.829
margin_right = 494.669
margin_bottom = 305.829
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "Continue"
flat = true

[node name="New Game" type="Button" parent="."]
margin_left = 403.669
margin_top = 344.111
margin_right = 494.669
margin_bottom = 378.111
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "New Game"
flat = true

[node name="Volume" parent="." instance=ExtResource( 4 )]

[node name="Quit Game" type="Button" parent="."]
margin_left = 401.409
margin_top = 520.296
margin_right = 492.409
margin_bottom = 554.296
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "Quit Game"
flat = true

[node name="Graphics" type="Button" parent="."]
margin_left = 379.122
margin_top = 478.627
margin_right = 499.122
margin_bottom = 498.627
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "Graphics:Fast"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 503.38, 429.293 )
current = true

[node name="Label" type="Label" parent="."]
margin_left = 34.2259
margin_top = 179.463
margin_right = 273.226
margin_bottom = 227.463
custom_fonts/font = ExtResource( 3 )
text = "Credits:
Code and Art: Galo
Music: RopeBoyo and chasebethea"

[connection signal="button_down" from="Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="New Game" to="." method="_on_New_Game_button_down"]
[connection signal="button_down" from="Quit Game" to="." method="_on_Quit_Game_button_down"]
[connection signal="button_down" from="Graphics" to="." method="_on_Button_button_down"]
